# rcli

./: .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  deny.toml  output.toml
.github/workflows/: build.yml
fixtures/: b64.txt  blake3.key  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_covert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
