[package]
name = "rcli"
authors = ["tom <tom.changt@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
blake3 = "1.5.5"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
toml = "0.8"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
